changes styles and updates structure

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,2 +1,8 @@
 @import './common';
-@import './example';
+@import './utils/variables';
+@import './base';
+@import './mainBlock';
+@import './mainForm';
+@import './inputBlock';
+@import './button';
+@import './contactsList';
